# findThatObject

./: .gitignore  CMakeLists.txt  README  README.md  findThatObject.cbp  geometry.cpp  geometry.h  globe-scene.pcd  globe-scene.txt  icp.cpp  icp.h  ls_error.plt  main.cpp  plotPointCloud.backup  plotPointCloud.cpp  plotPointCloud.h  trasformedCloud0.txt  trasformedCloud1.txt  trasformedGlobe.txt
gnuplot_scripts/: inliers.plt  ls_error_norm.plt
include/: converters.h  geometry.h  icp.h  kdTree.h  pclVisualizer.h
point_clouds/: globe.pcd
src/: converters.cpp  geometry.cpp  icp.cpp  kdTree.cpp  main.cpp  pclVisualizer.cpp  ransac.cpp
